# a2a-group-hub

./: README.md  pyproject.toml  setup-brain.sh
agents/: agents_config.py  demo_agent.py  llm_agent.py  run_agent.py
src/: bootstrap.py
src/channels/: models.py  permissions.py
src/hub/: aggregator.py  fanout.py  handler.py  router.py  server.py
src/observability/: metrics.py
src/storage/: base.py  neo4j_backend.py  qdrant.py  sqlite_backend.py
src/telegram/: bridge.py  commands.py  config.py  formatter.py
tests/: test_aggregator.py  test_api.py  test_channels_models.py  test_demo_agent.py  test_e2e.py  test_fanout.py  test_integration_openclaw.py  test_llm_agent.py  test_permissions.py  test_router.py  test_storage_qdrant.py  test_telegram_bridge.py
