[project]
name = "a2a-group-hub"
version = "1.0.0"
description = "Broadcasting hub that adds group chat to the A2A protocol"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.25",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "starlette>=0.40",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.42.0"]
storage = [
    "qdrant-client>=1.12",
    "neo4j>=5.25",
    "fastembed>=0.4",
]
telegram = ["python-telegram-bot>=22.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
    "ruff>=0.8",
]
all = ["a2a-group-hub[llm,storage,telegram,dev]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
